--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header {
 .box10{
     width: 440px;
     height: 580px;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     margin-left: 20px;
 }
 .box11{
